force-app/main/default/objects/shamshun_tabobject__c/shamshun_tabobject__c.object-meta.xml
<CustomObject>
    <description>shamsobject</description>
    <label>shamshun_tabobject</label>
    <nameField>
        <displayFormat>AS-{0000}</displayFormat>
        <label>shamshun_tabobject Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>shamshun_tabobjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>