force-app/main/default/objects/shamshun_tabobject__c/fields/About_your_self__c.field-meta.xml
<CustomField>
    <fullName>About_your_self__c</fullName>
    <label>About your self</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>