force-app/main/default/objects/shamshun_tabobject__c/fields/Dob__c.field-meta.xml
<CustomField>
    <fullName>Dob__c</fullName>
    <inlineHelpText>please enter date of birth</inlineHelpText>
    <label>Dob</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>