force-app/main/default/objects/shamshun_tabobject__c/fields/Employee_detail_s__c.field-meta.xml
<CustomField>
    <fullName>Employee_detail_s__c</fullName>
    <label>Employee details</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Place</fullName>
            </value>
            <value>
                <fullName>Phone number</fullName>
            </value>
            <value>
                <fullName>Adress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>