force-app/main/default/objects/shamshun_tabobject__c/fields/Employee_mail__c.field-meta.xml
<CustomField>
    <fullName>Employee_mail__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>ss</description>
    <inlineHelpText>helping hand shamshun</inlineHelpText>
    <label>Employee_mail</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>