force-app/main/default/objects/shamshun_tabobject__c/fields/EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeName__c</fullName>
    <label>EmployeeName</label>
    <length>10</length>
    <type>Text</type>
</CustomField>