force-app/main/default/objects/shamshun_tabobject__c/fields/Female__c.field-meta.xml
<CustomField>
    <fullName>Female__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Female</label>
    <type>Checkbox</type>
</CustomField>