force-app/main/default/objects/shamshun_tabobject__c/fields/Gadwal_near__c.field-meta.xml
<CustomField>
    <fullName>Gadwal_near__c</fullName>
    <inlineHelpText>location of the house</inlineHelpText>
    <label>Gadwal,</label>
    <required>true</required>
    <scale>11</scale>
    <type>Location</type>
</CustomField>