force-app/main/default/objects/shamshun_tabobject__c/fields/Phone_number__c.field-meta.xml
<CustomField>
    <fullName>Phone_number__c</fullName>
    <inlineHelpText>Enter phone number</inlineHelpText>
    <label>Phone number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>