force-app/main/default/objects/shamshun_tabobject__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <label>Salary</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>