force-app/main/default/objects/shamshun_tabobject__c/fields/STATES__c.field-meta.xml
<CustomField>
    <fullName>STATES__c</fullName>
    <label>STATES</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Employee_detail_s__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>sham_global_picklist</valueSetName>
    </valueSet>
</CustomField>