force-app/main/default/objects/shamshun_tabobject__c/fields/streams__c.field-meta.xml
<CustomField>
    <fullName>streams__c</fullName>
    <label>streams</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Telugu</fullName>
            </value>
            <value>
                <fullName>Maths</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>